--- a/qtify/src/components/Button/Button.module.css
+++ b/qtify/src/components/Button/Button.module.css
@@ -1,11 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 .btn {
-    background-color: var(--color-black);
-    color: var(--color-primary);
-    border-radius: 12px;
-    border: 1px solid var(--color-primary);
-    padding: 10px 16px;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: 600;
-    letter-spacing: 0.25px;
-  }
+  background-color: var(--color-black);
+  color: var(--color-primary);
+  border-radius: 12px;
+  border: 1px solid var(--color-primary);
+  padding: 10px 16px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 0.25px;
+  font-family: "Poppins", sans-serif;
+}
